# pythonlets

./: .gitignore  Pipfile  README.md  config.cfg  pyproject.toml
algos/: base_fibonacci.py  credit_card.py  donut.py  doomsday.py  double_dabble.py  egyptian_fraction.py  euclid_disc.py  evil_add.py  farey_algorithm.py  fast_inverse_sqrt.py  inventory.py  knapsack.py  longdivision.py  longest_inc_subseq.py  newton_iter_sqrt.py  permutations.py  primes.py  radix_sort.py  reward_students.py  ships.py  square_and_mulitply.py  stern_brocot_tree.py  zellers_congruence.py
algos/fib_heap/: main.py  (+3 more)
experimental/: aes.py  fast_inverse_sqrt.py  nonogram_internet.py  numways_stairs.py  phone_numbers.py  wifi.py
misc/: 3dplot.py  async.py  brainfuck.py  cannonballs.py  chessboard_stones.py  critchance.py  dragon.py  egyptian_fraction.py  frogs.py  kaprekar.py  knapsack.py  lfsr.py  longdivision.py  mastermind.py  meeting_ents.py  monopoly.py  mult_pers.py  music.py  nonogram_solver.py  permutations.py  pi_approx.py  pi_shanks.py  rabbit.py  radix_sort.py  sandpiles.py  shepard_tones.py  snapes_riddle.py  sqrtapprox.py  stern_brocot_tree.py  twopound.py
pdf/: jpg2pdf.py  pdf_rotate.py
ping/: ping.py
raytracing/: main.py  test.ppm
riot/: riot.py
sudoku/: cell.py  main.py  sudoku.py
tools/: bookmarks.py  canteen.py  gmail_attachments.py  insta_saved.py  merge_mp4.py  pdf_util.py  video_shrink.py
util/: insta_saved.py  jpg2pdf.py  merge_mp4.py  pdf_util.py  video_shrink.py
validate_backup/: main.py  not_found.json
yt_down/: downloader.py  main.py  other_pytube.txt
(+24 files in other folders)
