[tool.poetry]
name = "pythonlets"
version = "0.1.0"
description = ""
authors = ["Marek Hummel <marek.hummel3@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"
ffmpeg-python = "^0.2.0"
instaloader = "^4.11"
matplotlib = "^3.9.0"
moviepy = "^1.0.3"
musicalbeeps = "^0.2.9"
pdf2image = "^1.17.0"
phonenumbers = "^8.13.39"
pillow = "^10.3.0"
pyexiv2 = "^2.12.0"
pypdf = "^4.2.0"
simplegmail = "^4.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["F", "E", "W", "I", "N", "LOG", "SIM", "UP"]
extend-ignore = [
    "E741", # Allow usage of ambigious variable names (i, l, o)
    "E731", # Allow assignment of lambda function
    "SIM102", # Allow nested ifs, even though they could be merged with an AND
    "UP014", # Format NamedTuples as classes
]
exclude = ["tools/img_dating/*.py"]

[tool.mypy]
exclude = ["_creds/", "_out/"]
